Port REDUCE_ANY OP and generalize Reduce Helper
Port the new op from Lite and add it to the list of all ops
for Micro.

Prepare was implemeneted for REDUCE_MAX port but it is common
for all REDUCE_XXX ops, thus its helper is renamed to
PrepareReduceHelper from PrepareMaxHelper. Similarly, EvalMaxHelper
is renamed to EvalReduceHelper and its implementation body is
generalized to support all REDUCE_XXX ops.

--- a/tensorflow/lite/kernels/internal/BUILD
+++ b/tensorflow/lite/kernels/internal/BUILD
@@ -74,7 +74,9 @@ cc_library(
     hdrs = glob([
         "reference/*.h",
         "reference/integer_ops/*.h",
-    ]),
+    ]) + [
+        "reduce_common.h",
+    ],
     copts = tflite_copts(),
     # We are disabling parse_headers for this header-only target so that the
     # external and internal builds are consistent. The primary issue here is
