--- a/.github/workflows/cortex_m.yml
+++ b/.github/workflows/cortex_m.yml
@@ -9,7 +9,7 @@ name: Cortex-M
 # https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#onschedule
 on:
   schedule:
-    - cron: '0 4 * * *'
+  # - cron: '0 4 * * *'
 
   # Allow manually triggering of the workflow.
   workflow_dispatch: {}
@@ -20,6 +20,7 @@ jobs:
 
     if: |
       github.event_name == 'workflow_dispatch' ||
+      (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'ci:test')) ||
       (github.event_name == 'schedule' && github.repository == 'tensorflow/tflite-micro')
 
     name: Cortex-M Generic
@@ -38,6 +39,7 @@ jobs:
 
     if: |
       github.event_name == 'workflow_dispatch' ||
+      (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'ci:test')) ||
       (github.event_name == 'schedule' && github.repository == 'tensorflow/tflite-micro')
 
     name: Cortex-M Corstone 300 (FVP)
