--- a/tensorflow/lite/micro/python/interpreter/src/BUILD
+++ b/tensorflow/lite/micro/python/interpreter/src/BUILD
@@ -1,4 +1,5 @@
 load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")
+load("@tflm_pip_deps//:requirements.bzl", "requirement")
 
 package(
     default_visibility = ["//visibility:public"],
@@ -49,4 +50,7 @@ py_library(
         ":interpreter_wrapper_pybind.so",
     ],
     srcs_version = "PY3",
+    deps = [
+        requirement("numpy"),
+    ],
 )
