change to run scheduled workflow monthly
Change-Id: Ieb69d30b545f97cc5624e220ecc65f45e4d388ae

--- a/.github/workflows/cortex_m.yml
+++ b/.github/workflows/cortex_m.yml
@@ -9,7 +9,10 @@ name: Cortex-M
 # https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#onschedule
 on:
   schedule:
-  # - cron: '0 4 * * *'
+    # uncomment this to run daily
+    # - cron: '0 4 * * *'
+    # run on the 1st of every month
+    - cron: '0 4 1 * *'  
 
   # Allow manually triggering of the workflow.
   workflow_dispatch: {}
