--- a/.github/workflows/cortex_m.yml
+++ b/.github/workflows/cortex_m.yml
@@ -24,6 +24,9 @@ jobs:
 
     name: Cortex-M Generic
     steps:
+      - uses: actions/setup-python@v4
+        with: 
+          python-version: '3.10'
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: |
@@ -42,6 +45,9 @@ jobs:
 
     name: Cortex-M Corstone 300 (FVP)
     steps:
+      - uses: actions/setup-python@v4
+        with: 
+          python-version: '3.10'
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: |
