--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -24,7 +24,9 @@ jobs:
       (github.event_name == 'schedule' && github.repository == 'tensorflow/tflite-micro')
 
     steps:
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
+        with: 
+          python-version: '3.10'
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.TFLM_BOT_REPO_TOKEN }}
