trap error if ci:run label not present

--- a/.github/workflows/tests_entry.yml
+++ b/.github/workflows/tests_entry.yml
@@ -70,6 +70,7 @@ jobs:
               repo: context.repo.repo,
               name: 'ci:run'
             })
+        continue-on-error: true
 
   pr-has-bug:
     runs-on: ubuntu-latest
