Do not consider warning related to string overread as error.

--- a/tensorflow/lite/micro/tools/make/Makefile
+++ b/tensorflow/lite/micro/tools/make/Makefile
@@ -141,6 +141,7 @@ CC_WARNINGS := \
 
 COMMON_FLAGS := \
   -Werror \
+  -Wno-stringop-overread \
   -fno-unwind-tables \
   -ffunction-sections \
   -fdata-sections \
