--- a/.github/workflows/cortex_m_virtual_hardware.yml
+++ b/.github/workflows/cortex_m_virtual_hardware.yml
@@ -64,6 +64,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: arn:aws:iam::720528183931:role/Proj-vht-assume-role
+          aws-region: eu-west-1
       - name: Install AVH Client for Python
         run: |
           pip install git+https://github.com/ARM-software/avhclient.git@v0.1.1
