exempt Arm(R) Cortex(R)-M-based builds from string overread warning
Change-Id: Ifc4d01f54a54e35e62b873ce03f289cd80d5fa65

--- a/tensorflow/lite/micro/tools/make/Makefile
+++ b/tensorflow/lite/micro/tools/make/Makefile
@@ -151,7 +151,7 @@ COMMON_FLAGS := \
   $(ADDITIONAL_DEFINES)
 
 # no-stringop-overread is not a valid flag for some toolchains
-ifeq ($(findstring $(TARGET),xtensa hexagon),)
+ifeq ($(filter cortex_m% xtensa hexagon,$(TARGET)),)
   COMMON_FLAGS += -Wno-stringop-overread
 endif
 
