--- a/tensorflow/lite/micro/tflite_bridge/BUILD
+++ b/tensorflow/lite/micro/tflite_bridge/BUILD
@@ -54,8 +54,8 @@ cc_library(
     ],
     copts = micro_copts(),
     deps = [
-        ":micro_compatibility",
-        ":micro_log",
+        "//tensorflow/lite/micro:micro_compatibility",
+        "//tensorflow/lite/micro:micro_log",
         "//tensorflow/lite/core/api:error_reporter",
     ],
 )
