--- a/tensorflow/lite/core/api/BUILD
+++ b/tensorflow/lite/core/api/BUILD
@@ -8,21 +8,13 @@ package(
 
 cc_library(
     name = "api",
-    copts = tflite_copts() + micro_copts(),
-    visibility = ["//visibility:public"],
-    deps = [
-        ":flatbuffer_conversions",
-        ":op_resolver",
-    ],
-)
-
-cc_library(
-    name = "flatbuffer_conversions",
     srcs = [
         "flatbuffer_conversions.cc",
     ],
     hdrs = [
+        "error_reporter.h",
         "flatbuffer_conversions.h",
+        "op_resolver.h",
     ],
     copts = tflite_copts() + micro_copts(),
     visibility = ["//visibility:public"],
