Expose PAD prepare function for custom kernels
Custom implementations could call this function and won't need to
duplicate it. A header file is created for this, similar to CONV2D.

BUG=http://b/260762559

--- a/tensorflow/lite/micro/kernels/BUILD
+++ b/tensorflow/lite/micro/kernels/BUILD
@@ -267,6 +267,7 @@ tflm_kernel_cc_library(
         "lstm_shared.h",
         "micro_ops.h",
         "mul.h",
+        "pad.h",
         "pooling.h",
         "prelu.h",
         "quantize.h",
