--- a/tensorflow/lite/micro/kernels/Makefile.inc
+++ b/tensorflow/lite/micro/kernels/Makefile.inc
@@ -38,6 +38,12 @@ $(eval $(call microlite_test,kernel_transpose_conv_test,\
   $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/conv_test_common.cc,\
   $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/conv_test.h))
 
+$(eval $(call microlite_test,kernel_lstm_eval_test,\
+  $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/lstm_eval_test.cc \
+  $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/testdata/lstm_test_data.cc,\
+  $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/lstm_eval_test.h \
+  $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/testdata/lstm_test_data.h))
+
 $(eval $(call microlite_test,unidirectional_sequence_lstm_test,\
   $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/unidirectional_sequence_lstm_test.cc \
   $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/unidirectional_sequence_lstm_test_config.cc,\
@@ -80,7 +86,6 @@ $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/leaky_relu_test.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/logical_test.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/logistic_test.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/log_softmax_test.cc \
-$(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/lstm_eval_test.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/maximum_minimum_test.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/mirror_pad_test.cc \
 $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/mul_test.cc \
