step information added

--- a/tensorflow/lite/micro/kernels/BUILD
+++ b/tensorflow/lite/micro/kernels/BUILD
@@ -228,6 +228,7 @@ tflm_kernel_cc_library(
         "logistic.cc",
         "logistic_common.cc",
         "lstm_eval.cc",
+        "lstm_eval_16act.cc",
         "maximum_minimum.cc",
         "mirror_pad.cc",
         "mul.cc",
