change file names

--- a/tensorflow/lite/micro/kernels/BUILD
+++ b/tensorflow/lite/micro/kernels/BUILD
@@ -130,7 +130,7 @@ cc_library(
     name = "lstm_eval_test_lib",
     hdrs = [
         "lstm_eval_test.h",
-        "lstm_eval_16act_test.h",
+        "lstm_eval_general_test.h",
     ],
     deps = [
         ":kernel_util",
@@ -228,7 +228,7 @@ tflm_kernel_cc_library(
         "logistic.cc",
         "logistic_common.cc",
         "lstm_eval.cc",
-        "lstm_eval_16act.cc",
+        "lstm_eval_general.cc",
         "maximum_minimum.cc",
         "mirror_pad.cc",
         "mul.cc",
@@ -288,7 +288,7 @@ tflm_kernel_cc_library(
         "logical.h",
         "logistic.h",
         "lstm_eval.h",
-        "lstm_eval_16act.h",
+        "lstm_eval_general.h",
         "lstm_shared.h",
         "micro_ops.h",
         "mul.h",
@@ -934,9 +934,9 @@ cc_test(
 )
 
 cc_test(
-    name = "lstm_eval_16act_test",
+    name = "lstm_eval_general_test",
     srcs = [
-        "lstm_eval_16act_test.cc",
+        "lstm_eval_general_test.cc",
     ],
     deps = [
         ":lstm_eval_test_lib",
