--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -17,7 +17,7 @@ pull_request_rules:
         require_branch_protection: true
         method: squash
         commit_message_template: |
-          {{ title }}
+          {{ title }} (#{{ number }})
           {{ body_raw  }}
 
   - name: remove ci:ready_to_merge label
