--- a/.github/workflows/tests_entry.yml
+++ b/.github/workflows/tests_entry.yml
@@ -7,14 +7,14 @@
 # - If ci:ready_to_merge is on the PR and the pull_request_target type is synchronize not triggered
 #   by the mergify[bot] user, remove label and fail job.
 # - If ci:ready_to_merge label is on PR and pull_request_target type is labeled, run the test scripts.
-# 
+#
 # The end result is labeling ci:run or ci:ready_to_merge will run the test scripts,
 # If Mergify merges to the PR, the test scripts will run. If anyone else tries to add 
 # a commit to the PR or merge , the script will fail and ci:ready_to_merge will be
 # removed.
 #
-# This script runs the test scripts directly. Scheduled or manual runs use 
-# run_<scriptname>.yml as the entry point. 
+# This script runs the test scripts directly. Scheduled or manual runs use
+# run_<scriptname>.yml as the entry point.
 
 name: Tests Entry Point
 on:
@@ -83,7 +83,7 @@ jobs:
           echo "PR description requires a BUG= line with issue number."
           echo "See https://testing.googleblog.com/2017/09/code-health-providing-context-with.html for additional context"
           exit 1
-  
+
   call-ci:
     needs: ci-run
     uses: ./.github/workflows/ci.yml
@@ -109,9 +109,15 @@ jobs:
   call-check-tflite-files:
     needs: ci-run
     uses: ./.github/workflows/check_tflite_files.yml
-    with: 
+    with:
       trigger-sha: ${{ github.event.pull_request.head.sha }}
       pr-number: ${{ github.event.pull_request.number }}
       pr-body: ${{ github.event.pull_request.body }}
     secrets:
       tflm-bot-token: ${{ secrets.TFLM_BOT_PACKAGE_READ_TOKEN }}
+
+  call-cortex-m-virtual-hardware:
+    needs: ci-run
+    uses: ./.github/workflows/cortex_m_virtual_hardware.yml
+    with:
+      trigger-sha: ${{ github.event.pull_request.head.sha }}
