change new lstm kernel name make test

--- a/tensorflow/lite/micro/kernels/Makefile.inc
+++ b/tensorflow/lite/micro/kernels/Makefile.inc
@@ -44,14 +44,14 @@ $(eval $(call microlite_test,kernel_lstm_eval_internal_test,\
   $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/lstm_eval_internal_test.h \
   $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/testdata/lstm_test_data.h))
 
-$(eval $(call microlite_test,kernel_lstm_eval_general_test,\
-  $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/lstm_eval_general_test.cc \
+$(eval $(call microlite_test,kernel_lstm_eval_test,\
+  $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/lstm_eval_test.cc \
   $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/testdata/lstm_test_data.cc,\
-  $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/lstm_eval_general_test.h \
+  $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/lstm_eval_test.h \
   $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/testdata/lstm_test_data.h))
 
 $(eval $(call microlite_test,unidirectional_sequence_lstm_test,\
-  $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/unidirectional_sequence_lstm_integer_test.cc \
+  $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/unidirectional_sequence_lstm_test.cc \
   $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/testdata/lstm_test_data.cc,\
   $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/testdata/lstm_test_data.h))
 
