--- a/.github/workflows/issue_on_error.yml
+++ b/.github/workflows/issue_on_error.yml
@@ -37,9 +37,8 @@ jobs:
           WORKFLOW: ${{ inputs.workflow }}
           RUN_ID: ${{ inputs.run_id }}
           RUN_NUMBER: ${{ inputs.run_number }}
-          TOKEN: ${{ secrets.token }}
+          GITHUB_TOKEN: ${{ secrets.token }}
           FLAG_LABEL: ${{ inputs.flag_label }}
         run: |
-          pip3 install PyGithub
           python3 ci/issue_on_error.py
 
