--- a/tensorflow/lite/micro/examples/mnist_lstm/BUILD
+++ b/tensorflow/lite/micro/examples/mnist_lstm/BUILD
@@ -20,6 +20,17 @@ py_binary(
     ],
 )
 
+py_binary(
+    name = "convert8to16",
+    srcs = ["converter/convert8to16.py"],
+    srcs_version = "PY3",
+    deps = [
+        requirement("numpy"),
+        "//tensorflow/lite/tools:flatbuffer_utils",
+        "@absl_py//absl:app",
+    ],
+)
+
 filegroup(
     name = "sample_images",
     srcs = glob(["samples/*.png"]),
@@ -43,5 +54,21 @@ py_test(
     deps = [
         ":evaluate",
         ":train",
+    ],
+)
+
+py_test(
+    name = "converter_test",
+    srcs = ["converter/convert8to16_test.py"],
+    main = "converter/convert8to16_test.py",
+    python_version = "PY3",
+    tags = [
+        "noasan",
+        "nomsan",  # Python doesn't like these symbols from interpreter_wrapper_pybind.so
+        "noubsan",
+    ],
+    deps = [
+        ":convert8to16",
+        "//tensorflow/lite/micro/python/interpreter/src:tflm_runtime",
     ],
 )
