use helper functions

--- a/tensorflow/lite/micro/examples/mnist_lstm/BUILD
+++ b/tensorflow/lite/micro/examples/mnist_lstm/BUILD
@@ -43,6 +43,6 @@ py_test(
     deps = [
         ":evaluate",
         ":train",
-        "//tensorflow/lite/micro/tools:requantize",
+        "//tensorflow/lite/micro/tools:requantize_flatbuffer",
     ],
 )
