--- a/.github/workflows/tests_post.yml
+++ b/.github/workflows/tests_post.yml
@@ -40,8 +40,23 @@ jobs:
           /bin/bash -c \
           "cd /opt && tflite-micro/tensorflow/lite/micro/tools/ci_build/test_xtensa_fusion_f1.sh EXTERNAL tflite-micro/"
 
+  hifi5_unit_tests: 
+    runs-on: ubuntu-latest
+
+    name: Hifi5 Unit Tests (presubmit)
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ inputs.trigger-sha }}
+      - run: |
+          rm -rf .git
+          echo ${{ secrets.tflm-bot-token }} | docker login ghcr.io -u tflm-bot --password-stdin
+          docker run --env XTENSA_TOOLS_VERSION=RI-2022.9-linux --rm -v `pwd`:/opt/tflite-micro ghcr.io/tflm-bot/xtensa:0.4 \
+          /bin/bash -c \
+          "cd /opt && tflite-micro/tensorflow/lite/micro/tools/ci_build/test_xtensa_hifi5.sh tflite-micro/"
+
   issue_on_error:
-    needs: [hifimini_unit_tests, f1_unit_tests]
+    needs: [hifimini_unit_tests, f1_unit_tests, hifi5_unit_tests]
     if: ${{ always() && contains(needs.*.result, 'failure') }}
     uses: ./.github/workflows/issue_on_error.yml
     with:
