--- a/tensorflow/lite/micro/kernels/testdata/BUILD
+++ b/tensorflow/lite/micro/kernels/testdata/BUILD
@@ -44,3 +44,18 @@ py_binary(
         requirement("tensorflow-cpu"),
     ],
 )
+
+py_test(
+    name = "lstm_test_data_generator_test",
+    srcs = ["lstm_test_data_generator_test.py"],
+    main = "lstm_test_data_generator_test.py",
+    python_version = "PY3",
+    tags = [
+        "noasan",
+        "nomsan",  # Python doesn't like these symbols from interpreter_wrapper_pybind.so
+        "noubsan",
+    ],
+    deps = [
+        ":lstm_test_data_generator",
+    ],
+)
